@@ -3,6 +3,11 @@ package jp.posl.jprophet;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
+
+import jp.posl.jprophet.patch.DefaultPatchCandidate;
+import jp.posl.jprophet.patch.PatchCandidate;
+import jp.posl.jprophet.project.GradleProject;
+
 import static org.assertj.core.api.Assertions.*;
 import static org.junit.Assert.fail;
 
@@ -10,13 +15,12 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import com.github.javaparser.JavaParser;
 import com.github.javaparser.ast.CompilationUnit;
 import com.github.javaparser.ast.Modifier;
+import com.github.javaparser.ast.Node;
 import com.github.javaparser.ast.body.ClassOrInterfaceDeclaration;
 
 import org.apache.commons.io.FileUtils;
@@ -24,6 +28,7 @@ import org.apache.commons.io.FileUtils;
 public class FixedProjectGeneratorTest{
     private String projectPath;
     private String targetFilePath;
+    private String targetFileFqn;
     private List<String> projectFilePaths; 
     private String buildDir;
     private String resultDir;
@@ -33,7 +38,8 @@ public class FixedProjectGeneratorTest{
     @Before public void setUp(){
         this.projectPath = "src/test/resources/testGradleProject01";
         this.targetFilePath = "src/test/resources/testGradleProject01/src/main/java/testGradleProject01/App.java";
-        this.projectFilePaths = new ArrayList<String>(Arrays.asList(
+        this.targetFileFqn = "testGradleProject01.App";
+        this.projectFilePaths = List.of(
             "testGradleProject01/src/main/java/testGradleProject01/App.java",
             "testGradleProject01/src/main/java/testGradleProject01/App2.java",
             "testGradleProject01/src/test/java/testGradleProject01/AppTest.java",
@@ -45,10 +51,10 @@ public class FixedProjectGeneratorTest{
             "testGradleProject01/gradlew",
             "testGradleProject01/gradlew.bat",
             "testGradleProject01/settings.gradle"
-        ));
+        );
         this.buildDir = "./temp/";
         this.resultDir = "./result/";
-        this.config = new RepairConfiguration(this.buildDir, this.resultDir, new Project(this.projectPath));
+        this.config = new RepairConfiguration(this.buildDir, this.resultDir, new GradleProject(this.projectPath));
         this.fixedProjectGenerator = new FixedProjectGenerator();
         CompilationUnit compilationUnit;
         try {
@@ -59,9 +65,10 @@ public class FixedProjectGeneratorTest{
             fail(e.getMessage());
             return;
         }
-        ((ClassOrInterfaceDeclaration)compilationUnit.findRootNode().getChildNodes().get(1)).setModifier(Modifier.STATIC, true);
-        RepairCandidate repairCandidate = new ConcreteRepairCandidate(compilationUnit, this.targetFilePath);
-        this.fixedProjectGenerator.exec(config, repairCandidate);
+        Node targetNode = compilationUnit.findRootNode().getChildNodes().get(1);
+        ((ClassOrInterfaceDeclaration)targetNode).setModifier(Modifier.STATIC, true);
+        PatchCandidate patchCandidate = new DefaultPatchCandidate(new RepairUnit(targetNode, 1, compilationUnit), this.targetFilePath, this.targetFileFqn);
+        this.fixedProjectGenerator.exec(config, patchCandidate);
        
     }
 
